Fix spacing, version 1

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,8 +9,12 @@
 body {
   background-image: url(../img/background-tile.jpg);
   background-repeat: repeat;
-  font-family: serif;
+  font-family: "Times New Roman", Times, serif;
   margin: 0 auto;
+}
+
+.homepage-links {
+  font-size: 36px;
 }
 
 img {
@@ -18,18 +22,23 @@ img {
 }
 
 header {
+  align-items: center;
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
 }
 
 .first-header-row {
+  align-items: center;
   display: flex;
   flex: 1 1 auto;
-  align-items: center;
   gap: 15px;
+  padding: 20px 15px 0 15px;
+}
+
+.second-header-row {
+  padding: 0 15px 20px 15px;
 }
 
 main {
@@ -43,5 +52,20 @@ main {
   align-items: center;
   display: flex;
   flex: 1 1 auto;
+  gap: 10px;
   justify-content: center;
+  padding: 0 15px 20px 15px;
 }
+
+.duis-row,
+.mp3s-row {
+  align-items: center;
+  display: flex;
+  gap: 15px;
+  padding: 0 15px 20px 15px;
+}
+
+.rainbow-heart {
+  display: inline;
+}
+
